<resources>
    <string name="app_name">ひつだん</string>
    <string name="setting_title">設定</string>

    <string name="default_notification_channel_id">hitstudan_nitification_channel_id</string>
    <string name="msg_token_fmt">%s</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="login">ログイン</string>
    <string name="logout">ログアウト</string>
    <string name="withdrawal">退会</string>
    <string name="storage">@string/list_images_title</string>

    <string name="setting_pen_weight">ペンの太さ</string>
    <string name="setting_pen_color">ペンの色</string>
    <string name="setting_background_color">背景の色</string>
    <string name="eraser_switch">消しゴムボタンを表示</string>
    <string name="options">オプション</string>

    <string name="save">保存する</string>
    <string name="cancel">キャンセル</string>
    <string name="load">この画像を読み込む</string>

    <string name="pref_pen_set">PREF_PEN_SET</string>
    <string name="pref_key_pen_weight">PREF_KEY_PEN_WEIGHT</string>
    <string name="pref_key_pen_color">PREF_KEY_PEN_COLOR</string>
    <string name="pref_key_background_color">PREF_KEY_BACKGROUND_COLOR</string>
    <string name="pref_key_shown_eraser">PREF_KEY_SHOWN_ERASER</string>
    <string name="pref_custom_pen_color">PREF_CUSTOM_PEN_COLOR</string>
    <string name="pref_use_custom_pen">PREF_USE_CUSTOM_PEN</string>

    <string name="list_images_title">保存した画像</string>
    <string name="confirm_load_image">この画像を読み込みますか？</string>

    <string name="no_background_color">画像を読み込んでいる時は\n背景色を指定できません</string>
    <string name="custom_pen_color">ペンの色をカスタマイズする</string>
</resources>
