<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="fragmentActivity"
            type="androidx.fragment.app.FragmentActivity" />
        <variable
            name="viewModel"
            type="app.birth.h3.feature.StorageImagePreviewViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:bitmap="@{viewModel.loadBitmap}"
            app:scaleType='@{"centerInside"}'
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:src="@tools:sample/avatars" />

        <View
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/mask_bottom_to_top_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/bottom_mask"
            android:layout_width="0dp"
            android:layout_height="@dimen/toolbar_bottom_mask_height"
            android:background="@drawable/mask_top_to_bottom_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:text="@{viewModel.imageName}"
            android:textStyle="bold"
            android:textColor="@color/colorPenWhite"
            app:layout_constraintTop_toTopOf="@id/back_arrow"
            app:layout_constraintBottom_toBottomOf="@id/back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="タイトル"/>

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="@dimen/toolbar_backarrow_size"
            android:layout_height="@dimen/toolbar_backarrow_size"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:tint="@color/colorPenWhite"
            android:layout_margin="@dimen/margin_l"
            android:onClick="@{(v) -> viewModel.onClickPopback(v)}"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_load_image"
            android:layout_margin="@dimen/margin_l"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textStyle="bold"
            android:textColor="@color/colorPenWhite"
            app:layout_constraintBottom_toTopOf="@id/cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/cancel"
            style="@style/Button.White"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_m"
            android:layout_marginBottom="@dimen/margin_l"
            android:layout_marginEnd="@dimen/margin_m"
            android:padding="@dimen/margin_m"
            android:text="@string/cancel"
            android:onClick="@{(v) -> viewModel.onClickPopback(v)}"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/load"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"/>

        <Button
            android:id="@+id/load"
            style="@style/Button.White"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/load"
            android:layout_marginStart="@dimen/margin_m"
            android:layout_marginEnd="@dimen/margin_m"
            android:layout_marginBottom="@dimen/margin_l"
            android:padding="@dimen/margin_m"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:onClick="@{(v) -> viewModel.onClickLoadImage(fragmentActivity)}"
            app:layout_constraintStart_toEndOf="@id/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
