<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="app.birth.h3.view.PenSettingViewModel" />
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/id_dialog_pen_set"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:text="@string/setting_pen_weight" />

        <SeekBar
            android:id="@+id/seekbar_pen_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:progress="@={viewModel.penWeight}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:text="@string/setting_pen_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_set_color_black"
                    android:layout_width="@dimen/set_color_button_wh"
                    android:layout_height="@dimen/set_color_button_wh"
                    android:layout_margin="@dimen/set_color_button_margin"
                    android:layout_weight="1"
                    android:text="@{viewModel.isBlack}"
                    android:onClick="@{() -> viewModel.onClickPenColor(viewModel.colors.black)}"
                    android:background="@{viewModel.colors.black.code}"
                    android:textColor="@color/colorPenWhite" />

                <Button
                    android:id="@+id/button_set_color_blue"
                    android:layout_width="@dimen/set_color_button_wh"
                    android:layout_height="@dimen/set_color_button_wh"
                    android:layout_margin="@dimen/set_color_button_margin"
                    android:layout_weight="1"
                    android:text="@{viewModel.isBlue}"
                    android:onClick="@{() -> viewModel.onClickPenColor(viewModel.colors.blue)}"
                    android:background="@{viewModel.colors.blue.code}"
                    android:textColor="@color/colorPenWhite" />

                <Button
                    android:id="@+id/button_set_color_green"
                    android:layout_width="@dimen/set_color_button_wh"
                    android:layout_height="@dimen/set_color_button_wh"
                    android:layout_margin="@dimen/set_color_button_margin"
                    android:layout_weight="1"
                    android:text="@{viewModel.isGreen}"
                    android:onClick="@{() -> viewModel.onClickPenColor(viewModel.colors.green)}"
                    android:background="@{viewModel.colors.green.code}"
                    android:textColor="@color/colorPenWhite" />

                <Button
                    android:id="@+id/button_set_color_orange"
                    android:layout_width="@dimen/set_color_button_wh"
                    android:layout_height="@dimen/set_color_button_wh"
                    android:layout_margin="@dimen/set_color_button_margin"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.onClickPenColor(viewModel.colors.orange)}"
                    android:background="@{viewModel.colors.orange.code}"
                    android:textColor="@color/colorPenWhite" />

                <Button
                    android:id="@+id/button_set_color_red"
                    android:layout_width="@dimen/set_color_button_wh"
                    android:layout_height="@dimen/set_color_button_wh"
                    android:layout_margin="@dimen/set_color_button_margin"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.onClickPenColor(viewModel.colors.red)}"
                    android:background="@{viewModel.colors.red.code}"
                    android:textColor="@color/colorPenWhite" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_set_color_brawn"
                    android:layout_width="@dimen/set_color_button_wh"
                    android:layout_height="@dimen/set_color_button_wh"
                    android:layout_margin="@dimen/set_color_button_margin"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.onClickPenColor(viewModel.colors.brawn)}"
                    android:background="@{viewModel.colors.blue.code}"
                    android:textColor="@color/colorPenWhite" />

                <Button
                    android:id="@+id/button_set_color_cyan"
                    android:layout_width="@dimen/set_color_button_wh"
                    android:layout_height="@dimen/set_color_button_wh"
                    android:layout_margin="@dimen/set_color_button_margin"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.onClickPenColor(viewModel.colors.cyan)}"
                    android:background="@{viewModel.colors.cyan.code}"
                    android:textColor="@color/colorPenWhite" />

                <Button
                    android:id="@+id/button_set_color_teal"
                    android:layout_width="@dimen/set_color_button_wh"
                    android:layout_height="@dimen/set_color_button_wh"
                    android:layout_margin="@dimen/set_color_button_margin"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.onClickPenColor(viewModel.colors.teal)}"
                    android:background="@{viewModel.colors.teal.code}"
                    android:textColor="@color/colorPenWhite" />

                <Button
                    android:id="@+id/button_set_color_yellow"
                    android:layout_width="@dimen/set_color_button_wh"
                    android:layout_height="@dimen/set_color_button_wh"
                    android:layout_margin="@dimen/set_color_button_margin"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.onClickPenColor(viewModel.colors.yellow)}"
                    android:background="@{viewModel.colors.yellow.code}"
                    android:textColor="@color/colorPenWhite" />

                <Button
                    android:id="@+id/button_set_color_pink"
                    android:layout_width="@dimen/set_color_button_wh"
                    android:layout_height="@dimen/set_color_button_wh"
                    android:layout_margin="@dimen/set_color_button_margin"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.onClickPenColor(viewModel.colors.magenta)}"
                    android:background="@{viewModel.colors.magenta.code}"
                    android:textColor="@color/colorPenWhite" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_set_color_grey"
                    android:layout_width="@dimen/set_color_button_wh"
                    android:layout_height="@dimen/set_color_button_wh"
                    android:layout_margin="@dimen/set_color_button_margin"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.onClickPenColor(viewModel.colors.grey)}"
                    android:background="@{viewModel.colors.grey.code}"
                    android:textColor="@color/colorPenWhite" />

                <Button
                    android:id="@+id/button_set_color_indigo"
                    android:layout_width="@dimen/set_color_button_wh"
                    android:layout_height="@dimen/set_color_button_wh"
                    android:layout_margin="@dimen/set_color_button_margin"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.onClickPenColor(viewModel.colors.indigo)}"
                    android:background="@{viewModel.colors.indigo.code}"
                    android:textColor="@color/colorPenWhite" />

                <Button
                    android:id="@+id/button_set_color_lime"
                    android:layout_width="@dimen/set_color_button_wh"
                    android:layout_height="@dimen/set_color_button_wh"
                    android:layout_margin="@dimen/set_color_button_margin"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.onClickPenColor(viewModel.colors.lime)}"
                    android:background="@{viewModel.colors.lime.code}"
                    android:textColor="@color/colorPenWhite" />

                <Button
                    android:id="@+id/button_set_color_deep_orange"
                    android:layout_width="@dimen/set_color_button_wh"
                    android:layout_height="@dimen/set_color_button_wh"
                    android:layout_margin="@dimen/set_color_button_margin"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.onClickPenColor(viewModel.colors.deepOrange)}"
                    android:background="@{viewModel.colors.deepOrange.code}"
                    android:textColor="@color/colorPenWhite" />

                <Button
                    android:id="@+id/button_set_color_purple"
                    android:layout_width="@dimen/set_color_button_wh"
                    android:layout_height="@dimen/set_color_button_wh"
                    android:layout_margin="@dimen/set_color_button_margin"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.onClickPenColor(viewModel.colors.purple)}"
                    android:background="@{viewModel.colors.purple.code}"
                    android:textColor="@color/colorPenWhite" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/setting_background_color" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_set_background_color_white"
                android:layout_width="@dimen/set_color_button_wh"
                android:layout_height="@dimen/set_color_button_wh"
                android:layout_margin="@dimen/set_color_button_margin"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.onClickPenColor(viewModel.colors.white)}"
                android:background="@{viewModel.colors.white.code}"
                android:textColor="@color/colorPenBlack" />

            <Button
                android:id="@+id/button_set_background_color_black"
                android:layout_width="@dimen/set_color_button_wh"
                android:layout_height="@dimen/set_color_button_wh"
                android:layout_margin="@dimen/set_color_button_margin"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.onClickPenColor(viewModel.colors.dark)}"
                android:background="@{viewModel.colors.dark.code}"
                android:textColor="@color/colorPenWhite" />

            <Button
                android:id="@+id/button_set_background_color_pink"
                android:layout_width="@dimen/set_color_button_wh"
                android:layout_height="@dimen/set_color_button_wh"
                android:layout_margin="@dimen/set_color_button_margin"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.onClickPenColor(viewModel.colors.pink)}"
                android:background="@{viewModel.colors.pink.code}"
                android:textColor="@color/colorPenBlack" />

            <Button
                android:id="@+id/button_set_background_color_yellow"
                android:layout_width="@dimen/set_color_button_wh"
                android:layout_height="@dimen/set_color_button_wh"
                android:layout_margin="@dimen/set_color_button_margin"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.onClickPenColor(viewModel.colors.lightYellow)}"
                android:background="@{viewModel.colors.lightYellow.code}"
                android:textColor="@color/colorPenBlack" />

            <Button
                android:id="@+id/button_set_background_color_blue"
                android:layout_width="@dimen/set_color_button_wh"
                android:layout_height="@dimen/set_color_button_wh"
                android:layout_margin="@dimen/set_color_button_margin"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.onClickPenColor(viewModel.colors.lightBlue)}"
                android:background="@{viewModel.colors.lightBlue.code}"
                android:textColor="@color/colorPenBlack" />

        </LinearLayout>


    </LinearLayout>
</layout>
